overflow + issues
overflow hidden.

Still working on making the items flex with resizing. Cant seem to get it right.

And two of the buttons I want side by side.

--- a/css/style.css
+++ b/css/style.css
@@ -222,25 +222,6 @@ footer {
         align-items: center;
 }
 
-.cta-blue {
-    background-color: #103040;
-    color: #fff;
-    padding: 15px 0;
-    border-radius: 50px;
-    font-family: "Roboto regular";
-    font-weight: 70;
-    text-align: center;
-    max-width: 180px;
-    margin: 30px auto;
-    text-decoration: none;
-    font-size: 1.5em;
-    display; 
-
-}
-
-.info {
-    
-}
 
 .bestselling_products {
 /*    display: grid;
@@ -319,7 +300,6 @@ footer {
     }
 
 
-
 @media (min-width: 800px) {
    .header {
         float: left; 
@@ -364,7 +344,8 @@ footer {
 
     .cta-blue {
         display: list-item;
-        display: inline-block;
+        display: inline;
+        display: block;
         background-color: #103040;
         color: #fff;
         padding: 15px 0;
@@ -378,7 +359,12 @@ footer {
         font-size: 1.5em; 
     }
 
-  
-
+    .about
+    .contact {
+        float: left;
+    }
+    main { 
+        overflow: hidden;
+    }
 }
    
